qualia_derive/tests/compile-fail/only-supported-fixed-field-types.stderr
error: expected integer literal or string literal
 --> $DIR/only-supported-fixed-field-types.rs:4:32
  |
4 | #[object_fixed_fields("foo" => 4.5)]
  |                                ^^^
